==> apache/nuttx/arch/arm/src/stm32h7/stm32_spi_slave.c <==
#include <nuttx/config.h>
#include <sys/types.h>
#include <stdint.h>
#include <stdbool.h>
#include <stddef.h>
#include <semaphore.h>
#include <assert.h>
#include <errno.h>
#include <debug.h>
#include <string.h>
#include <nuttx/irq.h>
#include <nuttx/arch.h>
#include <nuttx/semaphore.h>
#include <nuttx/spi/spi.h>
#include <nuttx/spi/slave.h>
#include <nuttx/power/pm.h>
#include <arch/board/board.h>
#include "arm_internal.h"
#include "arm_arch.h"
#include "chip.h"
#include "stm32_rcc.h"
#include "stm32_gpio.h"
#include "stm32_spi.h"
#include "stm32_dma.h"
#    define SPI_DMA_PRIO  CONFIG_SPI_DMAPRIO
#    define SPI_DMA_PRIO  DMA_SCR_PRILO
#  define SPI_RXDMA16_CONFIG        (SPI_DMA_PRIO | DMA_SCR_MSIZE_16BITS | \
                                     DMA_SCR_PSIZE_16BITS | DMA_SCR_MINC | \
                                     DMA_SCR_DIR_P2M | DMA_SCR_CIRC)
#  define SPI_RXDMA8_CONFIG         (SPI_DMA_PRIO | DMA_SCR_MSIZE_8BITS | \
                                     DMA_SCR_PSIZE_8BITS | DMA_SCR_MINC| \
                                     DMA_SCR_DIR_P2M | DMA_SCR_CIRC)
#  define SPI_TXDMA16_CONFIG        (SPI_DMA_PRIO | DMA_SCR_MSIZE_16BITS| \
                                     DMA_SCR_PSIZE_16BITS | DMA_SCR_MINC| \
                                     DMA_SCR_DIR_M2P)
#  define SPI_TXDMA8_CONFIG         (SPI_DMA_PRIO | DMA_SCR_MSIZE_8BITS|  \
                                     DMA_SCR_PSIZE_8BITS | DMA_SCR_MINC|DMA_SCR_DIR_M2P)

static inline uint32_t spi_getreg(FAR struct stm32_spidev_s *priv,
                                  uint32_t offset)
{
  return getreg32(priv->spibase + offset);
}

static inline void spi_putreg(FAR struct stm32_spidev_s *priv,
                              uint32_t offset, uint32_t value)
{
  putreg32(value, priv->spibase + offset);
}

static void spi_dumpregs(FAR struct stm32_spidev_s *priv)
{
  spiinfo("CR1: 0x%08x CFG1: 0x%08x CFG2: 0x%08x\n",
          spi_getreg(priv, STM32_SPI_CR1_OFFSET),
          spi_getreg(priv, STM32_SPI_CFG1_OFFSET),
          spi_getreg(priv, STM32_SPI_CFG2_OFFSET));
  spiinfo("IER: 0x%08x SR: 0x%08x I2SCFGR: 0x%08x\n",
          spi_getreg(priv, STM32_SPI_IER_OFFSET),
          spi_getreg(priv, STM32_SPI_SR_OFFSET),
          spi_getreg(priv, STM32_SPI_I2SCFGR_OFFSET));
}

static void spi_setmode(FAR struct spi_slave_ctrlr_s *ctrlr,
                        enum spi_mode_e mode)
{
  FAR struct stm32_spidev_s *priv = (FAR struct stm32_spidev_s *)ctrlr;
  uint32_t setbits = 0;
  uint32_t clrbits = 0;

  spiinfo("mode=%d\n", mode);

  /* Has the mode changed? */

  if (mode != priv->mode)
    {
      /* Yes... Set CR1 appropriately */

      switch (mode)
        {
        case SPIDEV_MODE0: /* CPOL=0; CPHA=0 */
          setbits = 0;
          clrbits = SPI_CFG2_CPOL | SPI_CFG2_CPHA;
          break;

        case SPIDEV_MODE1: /* CPOL=0; CPHA=1 */
          setbits = SPI_CFG2_CPHA;
          clrbits = SPI_CFG2_CPOL;
          break;

        case SPIDEV_MODE2: /* CPOL=1; CPHA=0 */
          setbits = SPI_CFG2_CPOL;
          clrbits = SPI_CFG2_CPHA;
          break;

        case SPIDEV_MODE3: /* CPOL=1; CPHA=1 */
          setbits = SPI_CFG2_CPOL | SPI_CFG2_CPHA;
          clrbits = 0;
          break;

        default:
          return;
        }

      /* Change SPI mode */

      spi_modifyreg(priv, STM32_SPI_CFG2_OFFSET, clrbits, setbits);

      /* Save the mode so that subsequent re-configurations will be faster */

      priv->mode = mode;
    }
}

static void spi_setbits(FAR struct spi_slave_ctrlr_s *ctrlr, int nbits)
{
  FAR struct stm32_spidev_s *priv = (FAR struct stm32_spidev_s *)ctrlr;
  uint32_t setbits = 0;
  uint32_t clrbits = 0;

  spiinfo("nbits=%d\n", nbits);

  /* Has the number of bits changed? */

  if (nbits != priv->nbits)
    {
      /* Yes... Set CFG1 appropriately */

      /* Set the number of bits (valid range 4-32) */

      if (nbits < 4 || nbits > 32)
        {
          return;
        }

      clrbits = SPI_CFG1_DSIZE_MASK;
      setbits = SPI_CFG1_DSIZE_VAL(nbits);

      /* REVISIT: FIFO threshold level */

      /* If nbits is <=8, then we are in byte mode and FRXTH shall be set
       * (else, transaction will not complete).
       */

      if (nbits < 9)
        {
          setbits |= SPI_CFG1_FTHLV_1DATA; /* RX FIFO Threshold = 1 byte */
        }
      else
        {
          setbits |= SPI_CFG1_FTHLV_2DATA; /* RX FIFO Threshold = 2 byte */
        }

      spi_modifyreg(priv, STM32_SPI_CFG1_OFFSET, clrbits, setbits);

      priv->nbits = nbits;
    }
}

static void spi_bind(struct spi_slave_ctrlr_s *ctrlr,
                     struct spi_slave_dev_s *dev, enum spi_slave_mode_e mode,
                     int nbits)
{
  struct stm32_spidev_s *priv = (struct stm32_spidev_s *)ctrlr;
  uint32_t nss_gpio;

  spiinfo("dev=%p mode=%d nbits=%d\n", sdv, mode, nbits);

  DEBUGASSERT(priv != NULL && priv->dev == NULL && dev != NULL);

  /* Get exclusive access to the SPI device */

  spi_lock(ctrlr, true);

  /* Make sure the spi is disabled */

  spi_enable(priv, false);

  /* Make sure the dma is disabled */

  spi_modifyreg(priv, STM32_SPI_CFG1_OFFSET,
                SPI_CFG1_RXDMAEN | SPI_CFG1_TXDMAEN, 0);

  /* invalidate the whole rx buffer */

  up_flush_dcache((uintptr_t)priv->inq,
                  (uintptr_t)priv->inq + CONFIG_STM32H7_SPI_SLAVE_QSIZE);

  /* Bind the SPI slave device interface instance to the SPI slave
   * controller interface.
   */

  priv->dev = dev;

  /* Initialize the circular buffer head */

  priv->ihead = 0;

  /* Setup to begin normal SPI operation */

  spi_setmode(ctrlr, mode);
  spi_setbits(ctrlr, nbits);

  /* First, configure NSS as GPIO EXTI input */

  nss_gpio = priv->nss_pin & (GPIO_PORT_MASK | GPIO_PIN_MASK);
  nss_gpio |= (GPIO_INPUT | GPIO_FLOAT | GPIO_EXTI);
  stm32_configgpio(nss_gpio);

  /* Bind to NSS interrupt */

  (void)stm32_gpiosetevent(priv->nss_pin, false, true, false,
                           spi_nssinterrupt, priv);

#ifdef CONFIG_PM
  /* Register to receive power management callbacks */

  ret = pm_register(&priv->pm_cb);
  DEBUGASSERT(ret == OK);
  UNUSED(ret);
#endif

  spi_lock(ctrlr, false);
}

static void spi_unbind(struct spi_slave_ctrlr_s *ctrlr)
{
  struct stm32_spidev_s *priv = (struct stm32_spidev_s *)ctrlr;

  DEBUGASSERT(priv != NULL);
  spiinfo("Unbinding %p\n", priv->dev);

  DEBUGASSERT(priv->dev != NULL);

  /* Get exclusive access to the SPI device */

  spi_lock(ctrlr, true);

  /* Unbind the SPI slave interface */

  priv->dev = NULL;

  /* Disable DMA */

  spi_modifyreg(priv, STM32_SPI_CFG1_OFFSET,
                SPI_CFG1_RXDMAEN | SPI_CFG1_TXDMAEN, 0);

  /* Disable the SPI peripheral */

  spi_enable(priv, false);

  spi_lock(ctrlr, false);
}

static void spi_qflush(struct spi_slave_ctrlr_s *ctrlr)
{
  struct stm32_spidev_s *priv = (struct stm32_spidev_s *)ctrlr;
  irqstate_t flags;

  DEBUGASSERT(priv != NULL && priv->dev != NULL);

#ifdef CONFIG_STM32H7_SPI_DMA
  if (!priv->dmarunning)
    {
      return;
    }
#endif

  /* Get exclusive access to the SPI device */

  spi_lock(ctrlr, true);
  flags = enter_critical_section();

  /* Flush the input buffers */

#ifdef CONFIG_STM32H7_SPI_DMA
  priv->ihead =
    CONFIG_STM32H7_SPI_SLAVE_QSIZE - stm32_dmaresidual(priv->rxdma);
#else
  priv->ihead = 0;
  priv->itail = 0;
#endif

  /* Flush the output buffers */

  priv->ohead = 0;
  priv->otail = 0;
  leave_critical_section(flags);
  spi_lock(ctrlr, false);
}

static void spi_slave_initialize(struct stm32_spidev_s *priv)
{
  uint32_t setbits = 0;
  uint32_t clrbits = 0;
#ifdef CONFIG_PM
  int ret;
#endif

  /* Configure CR1, CFG1 and CFG2. Default configuration:
   *   Mode 0:                        CFG2.CPHA=0 and CFG2.CPOL=0
   *   Master:                        CFG2.MSTR=1
   *   8-bit:                         CFG1.DSIZE=7
   *   MSB transmitted first:         CFG2.LSBFRST=0
   *   Replace NSS with SSI & SSI=1:  CR1.SSI=1 CFG2.SSM=1 (prevent MODF err)
   *   Two lines full duplex:         CFG2.COMM=0
   */

  /* CR1 */

  clrbits = SPI_CR1_SPE;
  spi_modifyreg(priv, STM32_SPI_CR1_OFFSET, clrbits, setbits);

  /* CFG1 */

  clrbits = SPI_CFG1_DSIZE_MASK;
  setbits = SPI_CFG1_DSIZE_8BIT | SPI_CFG1_FTHLV_1DATA; /* REVISIT: FTHLV */
  spi_modifyreg(priv, STM32_SPI_CFG1_OFFSET, clrbits, setbits);

  /* CFG2 */

  clrbits = SPI_CFG2_CPHA | SPI_CFG2_CPOL | SPI_CFG2_LSBFRST |
    SPI_CFG2_COMM_MASK;
  setbits = SPI_CFG2_SSM;

  switch (priv->config)
    {
    default:
    case FULL_DUPLEX:
      setbits |= SPI_CFG2_COMM_FULL;
      break;
    case SIMPLEX_TX:
      setbits |= SPI_CFG2_COMM_STX;
      break;
    case SIMPLEX_RX:
      setbits |= SPI_CFG2_COMM_SRX;
      break;
    case HALF_DUPLEX:
      setbits |= SPI_CFG2_COMM_HALF;
      break;
    }

  spi_modifyreg(priv, STM32_SPI_CFG2_OFFSET, clrbits, setbits);

  priv->nbits     = 8;
  priv->mode      = SPIDEV_MODE0;

  /* CRCPOLY configuration */

  spi_putreg(priv, STM32_SPI_CRCPOLY_OFFSET, 7);

  /* Initialize the SPI semaphore that enforces mutually exclusive access. */

  nxsem_init(&priv->exclsem, 0, 1);

#ifdef CONFIG_STM32H7_SPI_DMA
  /* DMA will be started in the interrupt handler, synchronized to the master
   * nss
   */

  priv->dmarunning = false;

  /* Initialize the SPI semaphores that is used to wait for DMA completion.
   * This semaphore is used for signaling and, hence, should not have
   * priority inheritance enabled.
   */

  nxsem_init(&priv->rxsem, 0, 0);
  nxsem_init(&priv->txsem, 0, 0);

  sem_setprotocol(&priv->rxsem, SEM_PRIO_NONE);
  sem_setprotocol(&priv->txsem, SEM_PRIO_NONE);

  if (priv->config != SIMPLEX_TX)
    {
      priv->rxdma = stm32_dmachannel(priv->rxch);
      DEBUGASSERT(priv->rxdma);
    }

  if (priv->config != SIMPLEX_RX)
    {
      priv->txdma = stm32_dmachannel(priv->txch);
      DEBUGASSERT(priv->txdma);
    }

#endif

#ifdef CONFIG_DEBUG_SPI_INFO
  /* Dump registers after initialization */

  spi_dumpregs(priv);
#endif
}

FAR struct spi_slave_ctrlr_s *stm32_spi_slave_initialize(int bus)
{
  FAR struct stm32_spidev_s *priv = NULL;
  irqstate_t flags = enter_critical_section();

#ifdef CONFIG_STM32H7_SPI1_SLAVE
  if (bus == 1)
    {
      SPI_SLAVE_INIT_BUS(1);
    }
  else
#endif

#ifdef CONFIG_STM32H7_SPI2_SLAVE
  if (bus == 2)
    {
      SPI_SLAVE_INIT_BUS(2);
    }
  else
#endif

#ifdef CONFIG_STM32H7_SPI3_SLAVE
  if (bus == 3)
    {
      SPI_SLAVE_INIT_BUS(3);
    }
  else
#endif

#ifdef CONFIG_STM32H7_SPI4_SLAVE
  if (bus == 4)
    {
      SPI_SLAVE_INIT_BUS(4);
    }
  else
#endif

#ifdef CONFIG_STM32H7_SPI5_SLAVE
  if (bus == 5)
    {
      SPI_SLAVE_INIT_BUS(5);
    }
  else
#endif

#ifdef CONFIG_STM32H7_SPI6_SLAVE
  if (bus == 6)
    {
      SPI_SLAVE_INIT_BUS(6);
    }
  else
#endif
    {
      spierr("ERROR: Unsupported SPI bus: %d\n", bus);
      return NULL;
    }

  /* Initialize the SPI operations */

  priv->ctrlr.ops = &g_ctrlr_ops;

  leave_critical_section(flags);
  return (FAR struct spi_slave_ctrlr_s *)priv;
}
